Build a Fraction: Shapes: Fixed: mouse gets away from bars when dragged out
Build a Fraction: Made carousel circles clickable since they look like radio buttons
# 1.00.37 (66926) Aug 14, 2012
Equality Lab: Made right representation pink so it doesn't match any of the left representation colors
# 1.00.36 (66924) Aug 13, 2012
Customized level selection button icons for Fraction Matcher and Build a Fraction
# 1.00.35 (66922) Aug 13, 2012
Added a faint shadow to make "level selection screen" button icons look more like buttons
Build a Fraction: Shapes: Move the "undo" button closer to the circular containers
Build a Fraction: Shapes: For level 8, where fractions > 1 are introduced, only use denominators of 1/2 and 1/4 for the fractions > 1
Fraction Matcher: Moved level selection button to the right, above the refresh button
Build a Fraction: Shapes: When dropping a container in an incorrect collection box, do not move to exactly overlap a container that is already centered in the play area.
Switched to use a "level selection screen" button instead of a back button for build a fraction and fraction matcher.
Build a Fraction: Shapes: Fixed: If the "undo" button is pressed for a "double container" that is in the collection box, and it flies back to the floating panel it does not recollapse to single container.
Build a Fraction: Shapes: Fixed: When a "double container" is dragged over the collection box with the incorrect answer and released, it pops back to where the "minus" sign interferes with the collection boxes
Build a Fraction: Shapes: Made the container node go to the play area if it is empty, otherwise go to the toolbox
# 1.00.34 (66906) Aug 13, 2012
Build a Fraction: Numbers: Fixed: Fraction skeleton cannot be dragged out of toolbox after being ejected from a collection box
Build a Fraction: Switched from blue "split" button to yellow "undo" button