@@ -1,3 +1,4 @@
+Build a Fraction: Numbers: Fixed: Level 6 can create challenges with only a stack of "1" cards
 Build a Fraction: Shapes: Fixed: mouse gets away from bars when dragged out
 Build a Fraction: Made carousel circles clickable since they look like radio buttons
 # 1.00.37 (66926) Aug 14, 2012
